[gd_scene load_steps=7 format=3 uid="uid://dobmisgd4xjs3"]

[ext_resource type="Script" path="res://addons/uml/ui/node/class/member/variable.gd" id="1_4xlro"]
[ext_resource type="PackedScene" path="res://addons/uml/ui/node/class/access_modifier.tscn" id="1_tx16y"]
[ext_resource type="Theme" uid="uid://56an2mymekb2" path="res://addons/uml/ui/uml_editor_theme.tres" id="2_5k2ag"]
[ext_resource type="PackedScene" uid="uid://b2q00jwnkp0aa" path="res://addons/uml/ui/shortcut_handler.tscn" id="4_pk3dn"]

[sub_resource type="InputEventKey" id="InputEventKey_2ru06"]
device = -1
shift_pressed = true
keycode = 4194312

[sub_resource type="Shortcut" id="Shortcut_hxoka"]
events = [SubResource("InputEventKey_2ru06")]

[node name="Variable" type="HBoxContainer" node_paths=PackedStringArray("_access_modifier_node", "_name_node", "_type_node")]
mouse_filter = 0
theme = ExtResource("2_5k2ag")
script = ExtResource("1_4xlro")
_access_modifier_node = NodePath("AccessModifier")
_name_node = NodePath("Name")
_type_node = NodePath("Type")

[node name="AccessModifier" parent="." instance=ExtResource("1_tx16y")]
layout_mode = 2

[node name="Name" type="LineEdit" parent="."]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_5k2ag")
text = "variable"
expand_to_text_length = true
context_menu_enabled = false
select_all_on_focus = true

[node name="Colon" type="Label" parent="."]
layout_mode = 2
text = " : "

[node name="Type" type="LineEdit" parent="."]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_5k2ag")
text = "Type"
expand_to_text_length = true
context_menu_enabled = false
select_all_on_focus = true

[node name="DestroyShortcutHandler" parent="." node_paths=PackedStringArray("shortcut_context") instance=ExtResource("4_pk3dn")]
layout_mode = 2
shortcut_context = NodePath("..")
_shortcut = SubResource("Shortcut_hxoka")

[node name="PopupMenu" type="PopupMenu" parent="."]
item_count = 1
item_0/text = "Remove"
item_0/id = 0

[connection signal="modifier_selected" from="AccessModifier" to="." method="set_access_modifier"]
[connection signal="text_changed" from="Name" to="." method="set_variable_name"]
[connection signal="text_changed" from="Type" to="." method="set_variable_type"]
[connection signal="shortcut_handled" from="DestroyShortcutHandler" to="." method="request_removing"]
[connection signal="index_pressed" from="PopupMenu" to="." method="request_removing" unbinds=1]
